# gns3-automation-network-change-analysis

./: .env.example  .gitignore  Network Change Impact Analyzer.docx  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/addressing/: __init__.py  models.py  service.py
backend/app/ai/: __init__.py  models.py  providers.py  security.py  service.py
backend/app/api/: errors.py  models.py  progress.py  repositories.py  router.py  services.py
backend/app/api/routes/: __init__.py  health.py  (+1 more)
backend/app/changes/: __init__.py  models.py  service.py
backend/app/configuration/: __init__.py  exceptions.py  generator.py  models.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py
backend/app/discovery/: __init__.py  console.py  exceptions.py  models.py  parsers.py  service.py
backend/app/domain/: __init__.py  exceptions.py  models.py
backend/app/gns3/: __init__.py  client.py  deployment.py  exceptions.py  models.py  profiles.py  services.py
backend/app/graph/: __init__.py  models.py  service.py
backend/app/impact/: __init__.py  models.py  service.py
backend/app/reporting/: __init__.py  models.py  service.py
backend/app/risk/: __init__.py  models.py  service.py
backend/app/rollback/: __init__.py  exceptions.py  models.py  service.py
backend/app/simulation/: __init__.py  models.py  service.py
backend/app/topology/: __init__.py  service.py
backend/app/validation/: __init__.py  models.py  service.py
backend/tests/: conftest.py  test_addressing_service.py  test_ai_service.py  test_change_commands.py  test_change_deployment.py  test_config.py  test_configuration_generator.py  test_discovery_parsers.py  test_discovery_service.py  test_gns3_client.py  test_gns3_deployment.py  test_graph_service.py  test_health.py  test_real_gns3_optional.py  test_reporting_service.py  test_risk_service.py  test_root_cause_service.py  test_simulation_service.py  test_topology_service.py  test_validation_service.py  test_workflow_api.py
(+48 files in other folders)
